# djangorestframework-auth0

./: .gitignore  .travis.yml  LICENSE  MANIFEST  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
djangorestframework_auth0/: __init__.py  apps.py  authentication.py  settings.py  utils.py
docs/: migrations.md  use_cases.md
rest_framework_auth0/: __init__.py  apps.py  authentication.py  decorators.py  models.py  permissions.py  serializers.py  settings.py  utils.py  views.py
rest_framework_auth0/migrations/: 0001_initial.py  0002_auto_20161008_0215.py
tests/: dummy_test.py
