[tool.poetry]
name = "rest-framework-auth0"
version = "0.6.0"
description = "This library let you to authenticate an specific user on DRF based on the JWT Token returned by Auth0 Javascript libraries."
authors = ["Marcelo Cueto <cueto@live.cl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6"
django = ">2.2"
pyjwt = ">1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
